--- a/.travis.yaml
+++ b/.travis.yaml
@@ -3,7 +3,7 @@ node_js:
   - "node"
   
 install:  
-  - npm install
+  - npm install @babel/core @babel/preset-env @babel/preset-react babel-cli jest
 
 script:
 - npm test
