--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "testing my api",
   "main": "exam.js",
   "dependencies": {
+    "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
+    "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "jest": "^23.6.0",
     "react-test-renderer": "^16.6.3",
     "regenerator-runtime": "^0.13.1"
